--- a/Web.config
+++ b/Web.config
@@ -23,7 +23,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="sqltrialconnectionstring" connectionString="Data Source=tcp:grip-bank-server.database.windows.net,1433;Initial Catalog=GRIP_bank_db;User Id=sqladmin@grip-bank-server;Password=Sid@8777852961" providerName="System.Data.SqlClient" />
+    <add name="sqltrialconnectionstring" connectionString="Data Source=tcp:grip-bank-server.database.windows.net,1433;Initial Catalog=GRIP_bank_db;User Id=sqladmin@grip-bank-server;Password=" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
